--- a/AWSDB/wwwroot/css/site.css
+++ b/AWSDB/wwwroot/css/site.css
@@ -25,6 +25,11 @@ html {
     margin-left: 35px
 }
 
+.Titulo-IndexU {
+    font-size: 25px;
+    margin-bottom 5px;
+}
+
 body {
   margin-bottom: 60px;
 }
