Log in y Uploads

--- a/AWSDB/Views/Home/Index.cshtml
+++ b/AWSDB/Views/Home/Index.cshtml
@@ -17,17 +17,15 @@
                 </thead>
                 <tbody>
 
-                    @foreach (var item in Model.LeadDetails)
-                    {
+                    @*@foreach (var item in Model.LeadDetails){
                         <tr>
-                            <td>@item.Codigo</td>
-                            <td>@item.Nombre</td>
-                            <td>@item.ClaseArticulo</td>
-                            <td>@item.Precio</td>
-                            <td><button asp-action="EditarV" type="submit" class="btn btn-primary">Editar este empleado/a</button></td>
+                        <td>@item.Codigo</td>
+                        <td>@item.Nombre</td>
+                        <td>@item.ClaseArticulo</td>
+                        <td>@item.Precio</td>
+                        <td><button asp-action="EditarV" type="submit" class="btn btn-primary">Editar este empleado/a</button></td>
                         </tr>
-
-                    }
+                    }*@
                 </tbody>
                 <tbody>
 
@@ -50,8 +48,8 @@
 		</div>
 	</div>
     <div class="form-group" style="display:none;">
-        <label asp-for="UserName">@Model.UserName</label>
-        <input asp-for="UserName" class="form-control" />
+        <label asp-for="NombreAdmin">@Model.NombreAdmin</label>
+        <input asp-for="NombreAdmin" class="form-control" />
     </div>
 </form>
 @if (TempData["Message"] != null) 
