--- a/AWSDB/Views/Home/IndexEmpleado.cshtml
+++ b/AWSDB/Views/Home/IndexEmpleado.cshtml
@@ -16,8 +16,7 @@
                     </tr>
                 </thead>
                 <tbody style="display:none;">
-
-                    @foreach (var item in Model.LeadDetails)
+                    @*@foreach (var item in Model.LeadDetails)
                     {
                         <tr>
                             <td>@item.Codigo</td>
@@ -25,12 +24,9 @@
                             <td>@item.ClaseArticulo</td>
                             <td>@item.Precio</td>
                         </tr>
-                    }
-
+                    }*@
                 </tbody>
                 <tbody>
-
-                    
 
 					<div class="input-group-append">
                         <button asp-action="" type="submit" class="btn btn-primary">Consultar planilla semanal</button>
