--- a/AWSDB/Views/Home/Create.cshtml
+++ b/AWSDB/Views/Home/Create.cshtml
@@ -15,15 +15,15 @@
             <div class="input-group-text">
                 <select name="selectClase" class="form-control">
                     
-                    @*@{
-                        var first = Model.NewCA.ElementAtOrDefault(0);
+                    @{
+                        var first = Model.NewTD.ElementAtOrDefault(0);
                         <option value="@first.Nombre">Tipo de identificacion</option>
                     }
 
-                    @foreach (var item in Model.NewCA)
+                    @foreach (var item in Model.NewTD)
                     {
                         <option value="@item.Nombre">@item.Nombre</option>
-                    }*@
+                    }
                 </select>
             </div>
         </div>
@@ -43,15 +43,15 @@
         <div class="input-group-prepend">
             <div class="input-group-text">
                 <select name="selectClase" class="form-control">
-                    @*@{
-                        var first2 = Model.NewCA.ElementAtOrDefault(0);
+                    @{
+                        var first2 = Model.NewP.ElementAtOrDefault(0);
                         <option value="@first.Nombre">Puesto de trabajo</option>
                     }
 
-                    @foreach (var item in Model.NewCA)
+                    @foreach (var item in Model.NewP)
                     {
                         <option value="@item.Nombre">@item.Nombre</option>
-                    }*@
+                    }
                 </select>
             </div>
         </div>
@@ -61,15 +61,15 @@
         <div class="input-group-prepend">
             <div class="input-group-text">
                 <select name="selectClase" class="form-control">
-                    @*@{
-                        var first3 = Model.NewCA.ElementAtOrDefault(0);
+                    @{
+                        var first3 = Model.NewD.ElementAtOrDefault(0);
                         <option value="@first.Nombre">Departamento</option>
                     }
 
-                    @foreach (var item in Model.NewCA)
+                    @foreach (var item in Model.NewD)
                     {
                         <option value="@item.Nombre">@item.Nombre</option>
-                    }*@
+                    }
                 </select>
             </div>
         </div>
