--- a/AWSDB/Views/Home/Index.cshtml
+++ b/AWSDB/Views/Home/Index.cshtml
@@ -9,29 +9,26 @@
             <table class="table table-striped" style="overflow-y:auto;">
                 <thead>
                     <tr>
-                        <th>Codigo</th>
+                        <th style="display:none">Id</th>
                         <th>Nombre</th>
-                        <th>Clase</th>
-                        <th>Precio</th>
+                        <th>Puesto</th>
                     </tr>
                 </thead>
                 <tbody>
 
-                    @*@foreach (var item in Model.LeadDetails){
+                    @foreach (var item in Model.LeadDetails){
                         <tr>
-                        <td>@item.Codigo</td>
                         <td>@item.Nombre</td>
-                        <td>@item.ClaseArticulo</td>
-                        <td>@item.Precio</td>
-                        <td><button asp-action="EditarV" type="submit" class="btn btn-primary">Editar este empleado/a</button></td>
+                        <td>@item.Puesto</td>
+                        <td><button asp-action="EditarV" asp-route-Id="@item.id" type="submit" class="btn btn-primary">Editar este empleado/a</button></td>
                         </tr>
-                    }*@
+                    }
                 </tbody>
                 <tbody>
 
                     <div class="input-group">
-                        <label asp-for="NewArticulo.Nombre"></label>
-                        <input asp-for="NewArticulo.Nombre" class="form-control" class="col-8" />
+                        <label asp-for="NewEmpleado.Nombre"></label>
+                        <input asp-for="NewEmpleado.Nombre" class="form-control" class="col-8" />
                         <div class="input-group-append">
                             <button asp-action="IndexN" type="submit" class="btn btn-primary">Buscar por nombre</button>
                         </div>
