--- a/AWSDB/Views/Home/IndexNombre.cshtml
+++ b/AWSDB/Views/Home/IndexNombre.cshtml
@@ -5,29 +5,25 @@
             <table class="table table-striped" style="overflow-y:auto;">
                 <thead>
                     <tr>
-                        <th>Codigo</th>
                         <th>Nombre</th>
-                        <th>Clase</th>
-                        <th>Precio</th>
+                        <th>Puesta</th>
                     </tr>
                 </thead>
                 <tbody>
 
-                    @*@foreach (var item in Model.LeadDetails){
+                    @foreach (var item in Model.LeadDetails){
                     <tr>
-                    <td>@item.Codigo</td>
                     <td>@item.Nombre</td>
-                    <td>@item.ClaseArticulo</td>
-                    <td>@item.Precio</td>
+                    <td>@item.Puesto</td>
                     <td><button asp-action="EditarV" type="submit" class="btn btn-primary">Editar este empleado/a</button></td>
                     </tr>
-                    }*@
+                    }
                 </tbody>
                 <tbody>
 
                     <div class="input-group">
-                        <label asp-for="NewArticulo.Nombre"></label>
-                        <input asp-for="NewArticulo.Nombre" class="form-control" class="col-8" />
+                        <label asp-for="NewEmpleado.Nombre"></label>
+                        <input asp-for="NewEmpleado.Nombre" class="form-control" class="col-8" />
                         <div class="input-group-append">
                             <button asp-action="IndexN" type="submit" class="btn btn-primary">Buscar por nombre</button>
                         </div>
@@ -43,8 +39,8 @@
         </div>
 	</div>
     <div class="form-group" style="display:none;">
-        <label asp-for="UserName">@Model.UserName</label>
-        <input asp-for="UserName" class="form-control" />
+        <label asp-for="NombreAdmin">@Model.NombreAdmin</label>
+        <input asp-for="NombreAdmin" class="form-control" />
     </div>
 </form>
 @if (TempData["Message"] != null) 
