--- a/AWSDB/Views/Home/Index.cshtml
+++ b/AWSDB/Views/Home/Index.cshtml
@@ -38,6 +38,7 @@
 					<div class="input-group-append">
 						
 						<button asp-action="VolverLogin" type="submit" class="btn btn-primary">Salir</button>
+                        <button asp-action="CreateV" type="submit" class="btn btn-primary">Insertar</button>
 					</div>
 
 				</tbody>
