--- a/AWSDB/Views/Home/Create.cshtml
+++ b/AWSDB/Views/Home/Create.cshtml
@@ -3,17 +3,17 @@
 
 <h2>Insertar Nuevo Empleado</h2>
 
-<form asp-controller="Article" asp-action="Create" method="post">
+<form asp-action="Create" method="post">
 
     <div class="form-group">
-        <label asp-for="NewArticulo.Nombre">Nombre del empleado/a</label>
-        <input asp-for="NewArticulo.Nombre" class="form-control" />
+        <label asp-for="NuevoEmpleado.Nombre">Nombre del empleado/a</label>
+        <input asp-for="NuevoEmpleado.Nombre" class="form-control" />
     </div>
 
     <div class="input-group">
         <div class="input-group-prepend">
             <div class="input-group-text">
-                <select name="selectClase" class="form-control">
+                <select name="selectTipoId" class="form-control">
                     
                     @{
                         var first = Model.NewTD.ElementAtOrDefault(0);
@@ -30,19 +30,14 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="NewArticulo.Nombre">Valor de la identificacion</label>
-        <input asp-for="NewArticulo.Nombre" class="form-control" />
-    </div>
-
-    <div class="form-group">
-        <label asp-for="NewArticulo.Nombre">Fecha de nacimiento</label>
-        <input asp-for="NewArticulo.Nombre" class="form-control" />
+        <label asp-for="NuevoEmpleado.ValorIdentidad">Valor de la identificacion</label>
+        <input asp-for="NuevoEmpleado.ValorIdentidad" class="form-control" />
     </div>
 
     <div class="input-group">
         <div class="input-group-prepend">
             <div class="input-group-text">
-                <select name="selectClase" class="form-control">
+                <select name="selectPuesto" class="form-control">
                     @{
                         var first2 = Model.NewP.ElementAtOrDefault(0);
                         <option value="@first.Nombre">Puesto de trabajo</option>
@@ -60,7 +55,7 @@
     <div class="input-group">
         <div class="input-group-prepend">
             <div class="input-group-text">
-                <select name="selectClase" class="form-control">
+                <select name="selectDepartamento" class="form-control">
                     @{
                         var first3 = Model.NewD.ElementAtOrDefault(0);
                         <option value="@first.Nombre">Departamento</option>
@@ -78,8 +73,8 @@
     <button asp-action="Insertar" type="submit" class="btn btn-primary">Insertar</button>
     <button asp-action="VolverCreate" type="submit" class="btn btn-primary">Cerrar</button>
     <div class="form-group" style="display:none;">
-        <label asp-for="UserName">@Model.UserName</label>
-        <input asp-for="UserName" class="form-control" />
+        <label asp-for="NombreAdmin">@Model.NombreAdmin</label>
+        <input asp-for="NombreAdmin" class="form-control" />
     </div>
 </form>
 @if (TempData["Message"] != null)
