--- a/AWSDB/Views/Home/IndexConsulMensual.cshtml
+++ b/AWSDB/Views/Home/IndexConsulMensual.cshtml
@@ -1,9 +1,9 @@
 ﻿@model CombinedViewModel
-<form asp-controller="IndexEmpleado" method="post">
+<form asp-controller="IndexConsulMensual" method="post">
     <div>
         <label class="Titulo-IndexU">Bienvenido/a empleado</label>
     </div>
-   
+
     <div class="row">
         <div class="table-responsive">
             <table class="table table-striped" style="overflow-y:auto;">
@@ -14,33 +14,33 @@
                         <th>Salario Neto</th>
                     </tr>
                 </thead>
-                <tbody >
+                <tbody>
                     @*@foreach (var item in Model.LeadDetails)
                     {
-                        <tr>
-                        <td>@item.Codigo</td>
-                        <td>@item.Nombre</td>
-                        <td>@item.ClaseArticulo</td>
-                        <td><button asp-action="EditarV" asp-route-Id="@item.id" type="submit" class="btn btn-primary">Editar este empleado/a</button></td>
-                        </tr>
+                    <tr>
+                    <td>@item.Codigo</td>
+                    <td>@item.Nombre</td>
+                    <td>@item.ClaseArticulo</td>
+                    <td><button asp-action="MensualDeduccionesV" asp-route-Id="@item.id" type="submit" class="btn btn-primary">Consultar Deducciones</button></td>
+                    </tr>
                     }*@
                 </tbody>
                 <tbody>
 
-					<div class="input-group-append">
+                    <div class="input-group-append">
                         <button asp-action="" type="submit" class="btn btn-primary">Consultar planilla semanal</button>
                         <button asp-action="" type="submit" class="btn btn-primary">Consultar planilla mensual</button>
-						<button asp-action="VolverLogin" type="submit" class="btn btn-primary">Salir</button>
+                        <button asp-action="VolverLogin" type="submit" class="btn btn-primary">Salir</button>
                         @if (Model.showButton == true)
                         {
                             <button asp-action="" id="botonRegresar" type="submit" class="btn btn-primary">Regresar</button>
                         }
-					</div>
+                    </div>
 
-				</tbody>
-			</table>
-		</div>
-	</div>
+                </tbody>
+            </table>
+        </div>
+    </div>
     <div class="form-group" style="display:none;">
         <label asp-for="UserName">@Model.UserName</label>
         <input asp-for="UserName" class="form-control" />
