--- a/AWSDB/Views/Home/IndexConsulSem.cshtml
+++ b/AWSDB/Views/Home/IndexConsulSem.cshtml
@@ -18,17 +18,21 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @*@foreach (var item in Model.LeadDetails)
+                    @foreach (var item in Model.PlanillaSemanal)
                     {
                         <tr>
-                            <td>@item.Codigo</td>
-                            <td>@item.Nombre</td>
-                            <td>@item.ClaseArticulo</td>
+                            <td>@item.salarioBruto</td>
+                            <td>@item.totalDeducciones</td>
+                            <td>@item.salarioNeto</td>
+                            <td>@item.Horas</td>
+                            <td>@item.HorasExtras</td>
+                            <td>@item.HorasDobles</td>
                             <td><button asp-action="SemDeduccionesV" asp-route-Id="@item.id" type="submit" class="btn btn-primary">Consultar Deducciones</button></td>
                             <td><button asp-action="SemBrutoV" asp-route-Id="@item.id" type="submit" class="btn btn-primary">Consultar Salario</button></td>
                         </tr>
-                    }*@
+                    }
                 </tbody>
+
                 <tbody>
 
 					<div class="input-group-append">
@@ -46,8 +50,8 @@
 		</div>
 	</div>
     <div class="form-group" style="display:none;">
-        <label asp-for="UserName">@Model.UserName</label>
-        <input asp-for="UserName" class="form-control" />
+        <label asp-for="NombreEmpleado">@Model.NombreEmpleado</label>
+        <input asp-for="NombreEmpleado" class="form-control" />
     </div>
 </form>
 @if (TempData["Message"] != null) 
