--- a/AWSDB/Views/Home/SemanalBruto.cshtml
+++ b/AWSDB/Views/Home/SemanalBruto.cshtml
@@ -42,8 +42,8 @@
 		</div>
 	</div>
     <div class="form-group" style="display:none;">
-        <label asp-for="UserName">@Model.UserName</label>
-        <input asp-for="UserName" class="form-control" />
+        <label asp-for="NombreEmpleado">@Model.NombreEmpleado</label>
+        <input asp-for="NombreEmpleado" class="form-control" />
     </div>
 </form>
 @if (TempData["Message"] != null) 
