--- a/AWSDB/Views/Home/IndexEmpleado.cshtml
+++ b/AWSDB/Views/Home/IndexEmpleado.cshtml
@@ -28,8 +28,8 @@
                 <tbody>
 
 					<div class="input-group-append">
-                        <button asp-action="" type="submit" class="btn btn-primary">Consultar planilla semanal</button>
-                        <button asp-action="" type="submit" class="btn btn-primary">Consultar planilla mensual</button>
+                        <button asp-action="IndexConsulSemV" type="submit" class="btn btn-primary">Consultar planilla semanal</button>
+                        <button asp-action="IndexConsulMensualV" type="submit" class="btn btn-primary">Consultar planilla mensual</button>
 						<button asp-action="VolverLogin" type="submit" class="btn btn-primary">Salir</button>
                         @if (Model.showButton == true)
                         {
@@ -42,8 +42,8 @@
 		</div>
 	</div>
     <div class="form-group" style="display:none;">
-        <label asp-for="UserName">@Model.UserName</label>
-        <input asp-for="UserName" class="form-control" />
+        <label asp-for="NombreEmpleado">@Model.NombreEmpleado</label>
+        <input asp-for="NombreEmpleado" class="form-control" />
     </div>
 </form>
 @if (TempData["Message"] != null) 
