--- a/AWSDB/Views/Home/Upload.cshtml
+++ b/AWSDB/Views/Home/Upload.cshtml
@@ -5,5 +5,6 @@
         <input type="file" name="Archivo" id="Archivo" class="form-control-file">
     </div>
     <button asp-action="UploadCatalogo" type="submit" class="btn btn-primary">Catalogo</button>
-    <button asp-action="" type="submit" class="btn btn-primary">Simular</button>
+    <button asp-action="UploadSimular" type="submit" class="btn btn-primary">Simular</button>
+    <button asp-action="VolverLog" type="submit" class="btn btn-primary">Simular</button>
 </form>
