--- a/AWSDB/Views/Home/Editar.cshtml
+++ b/AWSDB/Views/Home/Editar.cshtml
@@ -5,7 +5,7 @@
 
 <form  asp-action="Editar" method="post">
     <button asp-action="Erase" asp-route-Id="@Model.IdEmpleado" type="submit" class="btn btn-primary">Eliminar Empleado/a</button>
-    <button asp-action="prueba" type="submit" class="btn btn-primary">Impersonar Empleado/a</button>
+    <button asp-action="Personificar" asp-route-Id="@Model.IdEmpleado" type="submit" class="btn btn-primary">Impersonar Empleado/a</button>
 
     <div class="form-group">
         <label asp-for="NuevoEmpleado.Nombre">Nombre del empleado/a</label>
@@ -80,6 +80,10 @@
     <div class="form-group" style="display:none;">
         <label asp-for="NombreAdmin">@Model.NombreAdmin</label>
         <input asp-for="NombreAdmin" class="form-control" />
+    </div>
+    <div class="form-group" style="display:none;">
+        <label asp-for="PasswordAdmin">@Model.PasswordAdmin</label>
+        <input asp-for="PasswordAdmin" class="form-control" />
     </div>
     <div class="form-group" style="display:none;">
         <label asp-for="IdEmpleado">@Model.IdEmpleado</label>
