--- a/AWSDB/Views/Home/IndexEmpleado.cshtml
+++ b/AWSDB/Views/Home/IndexEmpleado.cshtml
@@ -30,10 +30,13 @@
 					<div class="input-group-append">
                         <button asp-action="IndexConsulSemV" type="submit" class="btn btn-primary">Consultar planilla semanal</button>
                         <button asp-action="IndexConsulMensualV" type="submit" class="btn btn-primary">Consultar planilla mensual</button>
-						<button asp-action="VolverLogin" type="submit" class="btn btn-primary">Salir</button>
-                        @if (Model.showButton == true)
+						
+                        @if (Model.showButton == 1)
                         {
-                            <button asp-action="" id="botonRegresar" type="submit" class="btn btn-primary">Regresar</button>
+
+                            <button asp-action="VolverEmpleado" id="botonRegresar" type="submit" class="btn btn-primary">Regresar</button>
+                        }else{
+                            <button asp-action="VolverLogin2" type="submit" class="btn btn-primary">Salir</button>
                         }
 					</div>
 
@@ -48,6 +51,10 @@
     <div class="form-group" style="display:none;">
         <label asp-for="NombreAdmin">@Model.NombreAdmin</label>
         <input asp-for="NombreAdmin" class="form-control" />
+    </div>
+    <div class="form-group" style="display:none;">
+        <label asp-for="showButton">@Model.showButton</label>
+        <input asp-for="showButton" class="form-control" />
     </div>
 </form>
 @if (TempData["Message"] != null) 
