--- a/AWSDB/Views/Home/SemanalDeducciones.cshtml
+++ b/AWSDB/Views/Home/SemanalDeducciones.cshtml
@@ -27,7 +27,7 @@
                 <tbody>
 
 					<div class="input-group-append">
-                        <button asp-action="" type="submit" class="btn btn-primary">Regresar</button>
+                        <button asp-action="VolverSemanalD" type="submit" class="btn btn-primary">Regresar</button>
 					</div>
 
 				</tbody>
@@ -37,6 +37,14 @@
     <div class="form-group" style="display:none;">
         <label asp-for="NombreEmpleado">@Model.NombreEmpleado</label>
         <input asp-for="NombreEmpleado" class="form-control" />
+    </div>
+    <div class="form-group" style="display:none;">
+        <label asp-for="NombreAdmin">@Model.NombreAdmin</label>
+        <input asp-for="NombreAdmin" class="form-control" />
+    </div>
+    <div class="form-group" style="display:none;">
+        <label asp-for="showButton">@Model.showButton</label>
+        <input asp-for="showButton" class="form-control" />
     </div>
 </form>
 @if (TempData["Message"] != null) 
