Cambios en el impersonar

--- a/AWSDB/Views/Home/IndexEmpleado.cshtml
+++ b/AWSDB/Views/Home/IndexEmpleado.cshtml
@@ -34,9 +34,9 @@
                         @if (Model.showButton == 1)
                         {
 
-                            <button asp-action="VolverEmpleado" id="botonRegresar" type="submit" class="btn btn-primary">Regresar</button>
+                            <button asp-action="VolverLogin2" id="botonRegresar" type="submit" class="btn btn-primary">Regresar</button>
                         }else{
-                            <button asp-action="VolverLogin2" type="submit" class="btn btn-primary">Salir</button>
+                            <button asp-action="VolverLogin" type="submit" class="btn btn-primary">Salir</button>
                         }
 					</div>
 
