--- a/AWSDB/Views/Home/SemanalDeducciones.cshtml
+++ b/AWSDB/Views/Home/SemanalDeducciones.cshtml
@@ -15,7 +15,7 @@
 
                 </thead>
                 <tbody>
-                    @foreach (var item in Model.mensualDeducciones)
+                    @foreach (var item in Model.semanalDeducciones)
                     {
                         <tr>
                             <td>@item.nombre</td>
