--- a/AWSDB/Views/Home/Upload.cshtml
+++ b/AWSDB/Views/Home/Upload.cshtml
@@ -6,5 +6,5 @@
     </div>
     <button asp-action="UploadCatalogo" type="submit" class="btn btn-primary">Catalogo</button>
     <button asp-action="UploadSimular" type="submit" class="btn btn-primary">Simular</button>
-    <button asp-action="VolverLog" type="submit" class="btn btn-primary">Simular</button>
+    <button asp-action="VolverLog" type="submit" class="btn btn-primary">Regresar</button>
 </form>
