--- a/AWSDB/Views/Home/IndexNombre.cshtml
+++ b/AWSDB/Views/Home/IndexNombre.cshtml
@@ -6,7 +6,7 @@
                 <thead>
                     <tr>
                         <th>Nombre</th>
-                        <th>Puesta</th>
+                        <th>Puesto</th>
                     </tr>
                 </thead>
                 <tbody>
